# easy_aigc

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  start.bat
app/: config.py  main.py
app/models/: schemas.py
app/providers/: base.py  evolink.py  registry.py  siliconflow.py
app/routers/: config_router.py  generation.py  model_router.py
app/services/: model_generator.py  multiview_generator.py  prompt_engine.py  storyboard_generator.py  subject_extractor.py
app/utils/: image_utils.py  storage.py
config/: settings.yaml
frontend/: index.html
frontend/css/: base.css  components.css  generation.css  models.css  variables.css
frontend/js/: api.js  app.js  components.js  generation.js  models.js  storyboard.js
